--- a/sn/templates/navbar.html
+++ b/sn/templates/navbar.html
@@ -32,7 +32,7 @@
       {% else %}
       <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{{ url_for('blog') }}">Блог<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">Блог<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Мої книги</a>
